@startuml
enum GameState {
    Pregame,
    Running,
    End,
}
class "GameStateManager : MonoBehaviour" as GameStateManager {
    + {static} Instance : GameStateManager
    + OnGameStart : Action
    + OnGameEnd : Action
    + OnResetGame : Action
    - inGameView : View
    - gameEndView : View
    - endGameText : TMP_Text
    - gameOverText : string = "Game Over!"
    - gameWinText : string = "You Win!"
    - _state : GameState
    + IsPregame : bool <<get>>
    + IsRunning : bool <<get>>
    + IsEnded : bool <<get>>
    + StartGame() : void
    + GameOver() : void
    + GameWin() : void
    + RestartGame() : void
}
GameStateManager --> "Instance" GameStateManager
GameStateManager --> "inGameView" View
GameStateManager --> "gameEndView" View
GameStateManager -> "_state" GameState
@enduml
